--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "cors": "2.8.5",
     "next": "latest",
     "react": "^17.0.2",
